# Agentic_AI_Content

./: 01a_Agentic-AI-Patterns.ipynb  3-chatbot_LangGraph.ipynb
Ashish_notebooks/: main.py  pyproject.toml
Ashish_notebooks/mcp-agentic-rag/: README.md  notebook.ipynb  notebook_fixed.py  requirements.txt
AutoGen/: assistant_userproxy_agent.py  autogen_example_tool.py  code_executor.py  requirements.txt  seq_chat_patterns.py  simple_conv_agent.py  travel_tools.py
CrewAI/CrewAI-YT_Video/: agents.py  ai.md  crew.py  requirements.txt  tasks.py  tools.py
MCP/: client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
MCP_Projects/: readme.txt
MCP_Projects/mcp-agentic-rag/: ashish_notebook.ipynb
MCP_Projects/mcp-voice-agent/mcp-voice-agent/: README.md
Miscellaneous/: 1-Chatbot_w_MsgHistory.ipynb  2-simplegraph.ipynb  4-ChainsLangGraph.ipynb  5-chatbotwithmultipletools.ipynb
