[project]
name = "my-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "groq>=0.31.0",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "llama-index>=0.13.2",
    "mcp>=1.13.0",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "tqdm>=4.67.1",
]
